Try and fix line wrapping

--- a/assets/main.css
+++ b/assets/main.css
@@ -161,6 +161,7 @@ td {
 
 table {
     border-collapse: collapse;
+    white-space: normal;
 }
 
 td:hover {
